vista mejoras usuario js

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 					</div>
 				</div>
 				<div class="div-inferior">
-					<form action="menup.html" method="post">
+					<form action="" method="POST">
 						<label for="username">Usuario</label>
 						<input type="text" id="username" name="username">
 						<br>
@@ -61,6 +61,7 @@
 						<br>
 						<input type="submit" value="Iniciar Sesión" id="iniciar-sesion">
 					</form>
+					<button id="vistaMenu" style="width: 150px; height: 75px; font-size: 22px; margin: 0;">Menu Usuario</button>
 				</div>
 			</main>
 		</div>
@@ -71,10 +72,11 @@
 						<img src="../src/img/logo.jpg" alt="logo-imagen"></a>
 					</div>
 				</div>           
-				<button ><a href="juego.html">JUGAR</a></button>
-				<button ><a href="mejoras.html">MEJORAS</a></button>
-				<button ><a href="clasificaciones.html">CLASIFICACIONES</a></button>
-				<button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>   
+				<a href="juego.html">JUGAR</a>
+				<a href="mejoras.html">MEJORAS</a>
+				<a href="clasificaciones.html">CLASIFICACIONES</a>
+				<a href="login.html" class="enlace-como-boton">SALIR</a>
+				<button id="boton-mejoras-usuario">Mejoras Usuario</button>   
 			</main>
 		</div>
 		<div id="vista-principal-juego">
