Ahora toda resolución inferior a las optimizadas mostrarán un mensaje de aviso

--- a/diseño/clasificaciones.html
+++ b/diseño/clasificaciones.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="register-page">
+        <main class="register-page" id="ocultar">
             <div class="div-superior">
                 <label><h1>CLASIFICACION</h1></label>
             </div>
@@ -60,5 +60,6 @@
             </table>
             <button class="volvermenu" ><a href="menup.html">MENU</a></button>
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
