--- a/diseño/index.html
+++ b/diseño/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">        
     </head>
     <body id="index">
-        <main id="landing-page">
+        <main id="landing-page" id="ocultar">
             <div class="div-superior" >
                 <div class="contenedor-imagen">
                     <img src="../src/img/logo.jpg" alt="logo-imagen">
@@ -22,5 +22,6 @@
                 <button><a href="login.html">Iniciar sesion</a></button>
             </div>
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
