--- a/diseño/juego.html
+++ b/diseño/juego.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main id="game-page">
+        <main id="game-page" id="ocultar">
             <div class="div-superior">
             </div>  
             <div class="div-inferior" id="grid-container">
@@ -71,5 +71,6 @@
                 <div class="grid-item">56</div>               
             </div>
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
