--- a/diseño/login.html
+++ b/diseño/login.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="login-page">
+        <main class="login-page" id="ocultar">
             <div class="div-superior">
                 <div class="contenedor-imagen">
                     <a href="index.html"><img src="../src/img/logo.jpg" alt="logo-imagen"></a>
@@ -28,5 +28,6 @@
                 </form>
             </div>
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
