--- a/diseño/menup.html
+++ b/diseño/menup.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="login-page">
+        <main class="login-page" id="ocultar">
             <div class="div-superior">
                 <div class="contenedor-imagen">
                     <img src="../src/img/logo.jpg" alt="logo-imagen"></a>
@@ -20,5 +20,6 @@
             <button ><a href="clasificaciones.html">CLASIFICACIONES</a></button>
             <button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>   
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
