--- a/diseño/nuevamejora.html
+++ b/diseño/nuevamejora.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="register-page">
+        <main class="register-page" id="ocultar">
             <div class="div-superior">
                 <label><h1>Nueva Mejora</h1></label>
             </div>
@@ -41,5 +41,6 @@
             <button class="volvermenu" ><a href="mejoras.html">VOLVER</a></button>
             <button class="subir" ><a href="mejoras.html">ACEPTAR</a></button>
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
