--- a/diseño/opadmin.html
+++ b/diseño/opadmin.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="register-page">
+        <main class="register-page" id="ocultar">
             <div class="div-superior">
                 <label><h1>Administrador</h1></label>
             </div>
@@ -23,6 +23,6 @@
             <button class="volvermenu"><a href="login.html">MENU</a></button>
 
         </main>
-        
+        <div class="mensaje"></div>
     </body>
 </html>
