--- a/diseño/bimagenes.html
+++ b/diseño/bimagenes.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="register-page">
+        <main class="register-page" id="ocultar">
             <div class="div-superior">
                 <label><h1 id="h1imagenes">Banco de Imagenes</h1></label>
             </div>
@@ -89,5 +89,6 @@
                 <input type="submit" value="BORRAR">
             </form>   
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
