--- a/diseño/bimagenesusuario.html
+++ b/diseño/bimagenesusuario.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="register-page">
+        <main class="register-page" id="ocultar">
             <div class="div-superior">
                 <label><h1 id="h1imagenes">Banco de Imagenes</h1></label>
             </div>
@@ -83,5 +83,6 @@
                 </div>        
             <button class="subir"><a href="mejoras.html">VOLVER</a></button> 
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
