--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="register-page">
+        <main class="register-page" id="ocultar">
             <div class="div-superior">
                 <label><h1>Mejoras</h1></label>
             </div>
@@ -163,5 +163,6 @@
             <button class="volvermenu" ><a href="menup.html">VOLVER</a></button>
             <button class="subir" ><a href="nuevamejora.html">NUEVA MEJORA</a></button>
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
