--- a/diseño/register.html
+++ b/diseño/register.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="register-page">
+        <main class="register-page" id="ocultar">
             <div class="div-superior">
                 <a href="index.html"><h1>REGISTRAR USUARIO</h1></a>
             </div>
@@ -25,5 +25,6 @@
                 </form>
             </div>
         </main>
+        <div class="mensaje"></div>
     </body>
 </html>
