--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 				<a href="mejoras.html">MEJORAS</a>
 				<a href="clasificaciones.html">CLASIFICACIONES</a>
 				<a href="login.html" class="enlace-como-boton">SALIR</a>
-				<button id="boton-mejoras-usuario">Mejoras Usuario</button>   
+				<button id="mejoras-usuario">Mejoras Usuario</button>   
 			</main>
 		</div>
 		<div id="vista-principal-juego">
@@ -146,146 +146,12 @@
 		<div id="vista-menu-mejoras">
 			<main id="register-page">
 				<div class="div-superior">
-					<label><h1>Mejoras</h1></label>
+					<h1 >Mejoras</h1>
 				</div>
-				<table border="1px"  id="tmejoras">
-					<tr>
-						<td>
-							<img src="../src/img/gato.png" alt="Descripción imagen">
-							<br>
-							<a href="bimagenesusuario.html" >
-								<button id="bimagenesusuario">Cambiar Imagen</button>
-							</a>
-						</td>
-						<td>
-							<select>
-								<option value="opcion1">Correr muy rápido</option>
-								<option value="opcion2">Más punticos</option>
-								<option value="opcion3">Limpieza automática</option>
-							</select>
-						</td> 
-						<td>
-							<input type="number" min="1" max="20" placeholder="Ingrese un número">
-						</td>          
-						<td>
-							<input type="text" placeholder="Ingrese un porcentaje">                  
-						</td>
-						<td><button>Borrar</button></td>
-					</tr>
-					<tr>
-						<td>
-							<img src="../src/img/logo.jpg" alt="Descripción imagen">
-							<br>
-							<a href="bimagenesusuario.html" >
-								<button id="bimagenesusuario">Cambiar Imagen</button>
-							</a>
-						</td>
-						<td>
-							<select>
-								<option value="opcion1">Correr mu rapido</option>
-								<option value="opcion2">Mas punticos</option>
-								<option value="opcion3">Limpieza automatica</option>
-							</select>
-						</td> 
-						<td>
-							<input type="number" min="1" max="20" placeholder="Ingrese un número">
-						</td>          
-						<td>
-							<input type="text" placeholder="Ingrese un porcentaje">                  
-						</td>
-						<td><button>Borrar</button></td>
-					</tr> 
-					<tr>
-						<td><img src="../src/img/foca.png" alt="Descripción imagen">
-							<br>
-							<a href="bimagenesusuario.html" >
-								<button id="bimagenesusuario">Cambiar Imagen</button>
-							</a>
-						</td>
-						<td>
-							<select>
-								<option value="opcion1">Correr mu rapido</option>
-								<option value="opcion2">Mas punticos</option>
-								<option value="opcion3">Limpieza automatica</option>
-							</select>
-						</td> 
-						<td>
-							<input type="number" min="1" max="20" placeholder="Ingrese un número">
-						</td>          
-						<td>
-							<input type="text" placeholder="Ingrese un porcentaje">                  
-						</td>
-						<td><button>Borrar</button></td>
-					</tr>
-					<tr>
-						<td><img src="../src/img/patatas.png" alt="Descripción imagen">
-							<br>
-							<a href="bimagenesusuario.html" >
-								<button id="bimagenesusuario">Cambiar Imagen</button>
-							</a>
-						</td>
-						<td>
-							<select>
-								<option value="opcion1">Correr mu rapido</option>
-								<option value="opcion2">Mas punticos</option>
-								<option value="opcion3">Limpieza automatica</option>
-							</select>
-						</td> 
-						<td>
-							<input type="number" min="1" max="20" placeholder="Ingrese un número">
-						</td>          
-						<td>
-							<input type="text" placeholder="Ingrese un porcentaje">                  
-						</td>
-						<td><button>Borrar</button></td>
-					</tr>
-					<tr>
-						<td><img src="../src/img/patatas.png" alt="Descripción imagen">
-							<br>
-							<a href="bimagenesusuario.html" >
-								<button id="bimagenesusuario">Cambiar Imagen</button>
-							</a>
-						</td>
-						<td>
-							<select>
-								<option value="opcion1">Correr mu rapido</option>
-								<option value="opcion2">Mas punticos</option>
-								<option value="opcion3">Limpieza automatica</option>
-							</select>
-						</td>
-						<td>
-							<input type="number" min="1" max="20" placeholder="Ingrese un número">
-						</td>          
-						<td>
-							<input type="text" placeholder="Ingrese un porcentaje">                  
-						</td> 
-						<td><button>Borrar</button></td>
-					</tr>
-					<tr>
-						<td><img src="../src/img/foca.png" alt="Descripción imagen">
-							<br>
-							<a href="bimagenesusuario.html" >
-								<button id="bimagenesusuario">Cambiar Imagen</button>
-							</a>
-						</td>
-						<td>
-							<select>
-								<option value="opcion1">Correr mu rapido</option>
-								<option value="opcion2">Mas punticos</option>
-								<option value="opcion3">Limpieza automatica</option>
-							</select>
-						</td> 
-						<td>
-							<input type="number" min="1" max="20" placeholder="Ingrese un número">
-						</td>          
-						<td>
-							<input type="text" placeholder="Ingrese un porcentaje">                  
-						</td>
-						<td><button>Borrar</button></td>
-					</tr>
-				</table>
-				<button id="volvermenu" ><a href="menup.html">VOLVER</a></button>
-				<button id="subir" ><a href="nuevamejora.html">NUEVA MEJORA</a></button>
+				<!-- TODO Mostrar un mensaje vacio si no hay nada -->
+				<a href="menup.html">VOLVER</a>
+				<a href="nuevamejora.html">NUEVA MEJORA</a>
+				<button id="boton-agregar-mejora">Agregar Mejora</button>
 			</main>
 		</div>
 		<div id="vista-clasificaciones">
@@ -420,6 +286,19 @@
 						</table>
 					</div>        
 				<button id="subir"><a href="mejoras.html">VOLVER</a></button> 
+			</main>
+		</div>
+		<div id="vista-agregar-mejora">
+			<main id="register-page">
+				<div class="div-superior">
+					<h1>Nueva Mejora</h1>
+				</div>
+				<label>Imagen</label>
+				<select id="select-option-agregar-mejora">
+					
+				</select>
+				<a href="mejoras.html">VOLVER</a>
+				<a href="mejoras.html">ACEPTAR</a>
 			</main>
 		</div>
 		<script type="module" src="./js/controller.js"></script>
