Funciona. Realizando ajustes.

--- a/diseño/nuevamejora.html
+++ b/diseño/nuevamejora.html
@@ -13,7 +13,7 @@
             <div class="div-superior">
                 <label><h1>Nueva Mejora</h1></label>
             </div>
-            <table border="1" class="tmejoras">
+            <table border="1" class="tmejoras" id="nuevamejora">
                     <tr>
                         <!-- Celda 1: Campo para hacer clic y elegir una imagen -->
                         <td>
