previsualizacion imagenes ok

--- a/src/index.html
+++ b/src/index.html
@@ -254,19 +254,21 @@
 				<div class="div-superior">
 					<h1>Nueva Mejora</h1>
 				</div>
-				<label for="imagenMejora">Imagen</label>
-				<select id="select-option-agregar-mejora" name="imagenMejora">
-				</select>
-				<br>
-				<label for="descripcionMejora">Descripción</label>
-				<input type="text" id="descripcionMejora" name="descripcionMejora" placeholder="Descripción de la mejora">
-				<br>
-				<label for="multiplicadorMejora">Multiplicador</label>
-				<input type="text" id="multiplicadorMejora" name="multiplicadorMejora" placeholder="Multiplicador de la mejora">
-				<br>
-				<label for="porcentajeAparicion">Porcentaje de Aparición</label>
-				<input type="text" id="porcentajeAparicion" name="porcentajeAparicion" placeholder="Porcentaje de aparición de la mejora">
-				<br>
+				<div id="contenedor-agregar-mejora">
+					<label for="imagenMejora">Imagen</label>
+					<select id="select-option-agregar-mejora" name="imagenMejora">
+					</select>
+					<br>
+					<label for="descripcionMejora">Descripción</label>
+					<input type="text" id="descripcionMejora" name="descripcionMejora" placeholder="Descripción de la mejora">
+					<br>
+					<label for="multiplicadorMejora">Multiplicador</label>
+					<input type="text" id="multiplicadorMejora" name="multiplicadorMejora" placeholder="Multiplicador de la mejora">
+					<br>
+					<label for="porcentajeAparicion">Porcentaje de Aparición</label>
+					<input type="text" id="porcentajeAparicion" name="porcentajeAparicion" placeholder="Porcentaje de aparición de la mejora">
+				</div>
+				<div id="imagen-previsualizacion"></div>
 				<a href="mejoras.html">VOLVER</a>
 				<a href="mejoras.html" id="aceptarBtn">ACEPTAR</a>
 			</main>
