Todo parcheado con tiritas, falta arreglar la de login y registro

--- a/diseño/index.html
+++ b/diseño/index.html
@@ -15,11 +15,11 @@
                     <img src="../src/img/logo.jpg" alt="logo-imagen">
                 </div>
                 <div id="contenedor-boton-registro">
-                    <button><a href="register.html">Registro</a></button>
+                    <button id="ir-registrar" class="tamfuente"><a href="register.html">Registro</a></button>
                 </div>
             </div>
             <div class="div-inferior">
-                <button><a href="login.html">Iniciar sesion</a></button>
+                <button class="tamfuente"><a href="login.html">Iniciar sesion</a></button>
             </div>
         </main>
         <div class="mensaje"></div>
