--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -40,7 +40,7 @@
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
                     <!-- Celda 3: Botón Borrar -->
-                    <td><button>Borrar</button></td>
+                    <td><button class="boton-borrar">Borrar</button></td>
                 </tr>
                 <tr>
                     <td>
@@ -64,7 +64,7 @@
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
-                    <td><button>Borrar</button></td>
+                    <td><button class="boton-borrar">Borrar</button></td>
                 </tr> 
                 <tr>
                     <td><img src="../src/img/foca.png" alt="Descripción imagen">
@@ -87,7 +87,7 @@
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
-                    <td><button>Borrar</button></td>
+                    <td><button class="boton-borrar">Borrar</button></td>
                 </tr>
                 <tr>
                     <td><img src="../src/img/patatas.png" alt="Descripción imagen">
@@ -110,7 +110,7 @@
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
-                    <td><button>Borrar</button></td>
+                    <td><button class="boton-borrar">Borrar</button></td>
                 </tr>
                 <!-- Repite las filas según sea necesario -->
                 <tr>
@@ -134,7 +134,7 @@
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td> 
-                    <td><button>Borrar</button></td>
+                    <td><button class="boton-borrar">Borrar</button></td>
                 </tr>
                 <tr>
                     <td><img src="../src/img/foca.png" alt="Descripción imagen">
@@ -157,7 +157,7 @@
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
-                    <td><button>Borrar</button></td>
+                    <td><button class="boton-borrar">Borrar</button></td>
                 </tr>
             </table>
             <button class="volvermenu" ><a href="menup.html">VOLVER</a></button>
