--- a/diseño/menup.html
+++ b/diseño/menup.html
@@ -9,16 +9,18 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main class="login-page" id="ocultar">
+        <main class="login-page" id="ocultar" >
             <div class="div-superior">
                 <div class="contenedor-imagen">
                     <img src="../src/img/logo.jpg" alt="logo-imagen"></a>
                 </div>
-            </div>           
-            <button ><a href="juego.html">JUGAR</a></button>
-            <button ><a href="mejoras.html">MEJORAS</a></button>
-            <button ><a href="clasificaciones.html">CLASIFICACIONES</a></button>
-            <button ><a href="login.html" class="enlace-como-boton">SALIR</a></button>   
+            </div>
+            <div class="botones-menus">
+                <button><a href="juego.html">JUGAR</a></button>
+                <button><a href="mejoras.html">MEJORAS</a></button>
+                <button><a href="clasificaciones.html">CLASIFICACIONES</a></button>
+                <button><a href="login.html" class="enlace-como-boton">SALIR</a></button> 
+            </div>          
         </main>
         <div class="mensaje"></div>
     </body>
