--- a/diseño/opadmin.html
+++ b/diseño/opadmin.html
@@ -14,14 +14,13 @@
                 <label><h1>Administrador</h1></label>
             </div>
             <div class="div-inferior">
-                <form id="opadmin">
-                    <button id="mejoras"><a href="opcionesadmin.html">Configuracion de Parametros</a></button>
+                <form id="opadmin" class="botones-menus">
+                    <button id="mejoras"><a href="opcionesadmin.html">Configuracion de Parámetros</a></button>
                     <button id="mejoras"><a href="bimagenes.html">Banco de Imagenes</a></button>
                 </form>
 
             </div>
             <button class="volvermenu"><a href="login.html">MENU</a></button>
-
         </main>
         <div class="mensaje"></div>
     </body>
