--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="../src/css/new_style.css">
+        <link rel="stylesheet" href="../src/css/prueba_style.css">
         <meta name="author" content="David, Antonio y Guillermo" />
         <title>Mejoras</title>
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
