--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,8 @@
 				</div>
 				<script>
 				function generateGridItems() {
-					var gridContainer = document.getElementById("grid-container");
-					var gridItems = "";
+					let gridContainer = document.getElementById("grid-container");
+					let gridItems = "";
 
 					for (let i = 1; i <= 56; i++) {
 						gridItems += '<div class="grid-item">' + i + '</div>';
@@ -313,6 +313,8 @@
 				</div>
 			</main>	
 		</div>
+
+
 		<script type="module" src="./js/controller.js"></script>
 	</body>
 </html>
