--- a/diseño/register.html
+++ b/diseño/register.html
@@ -15,7 +15,7 @@
             </div>
             <div class="div-inferior">
                 <form>
-                    <label for="nombre">Nombre</label>                 
+                    <label class="parche" for="nombre">Nombre</label>                 
                     <input type="text" id="nombre" name="nombre">
                     <br>
                     <label for="contraseña">Contraseña</label>
