--- a/diseño/login.html
+++ b/diseño/login.html
@@ -17,7 +17,7 @@
             </div>
             <div class="div-inferior">
                 <form action="menup.html" method="post">
-                    <label class="parche" for="username">Usuario</label>
+                    <label for="username">Usuario</label>
                     <input type="text" id="username" name="username">
                     <br>
                     <label for="password">Contraseña</label>
