--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -15,13 +15,16 @@
             </div>
             <table border="1px"  class="tmejoras">
                 <tr>
+                    <!-- Celda 1: Imagen -->
                     <td>
                         <img src="../src/img/gato.png" alt="Descripción imagen">
+                        <!-- Celda adicional para hacer clic y redirigir a bimagenes.html -->
                         <br>
                         <a href="bimagenesusuario.html" >
                             <button id="bimagenesusuario">Cambiar Imagen</button>
                         </a>
                     </td>
+                    <!-- Celda 2: Descripción -->
                     <td>
                         <select>
                             <option value="opcion1">Correr muy rápido</option>
@@ -32,6 +35,7 @@
                     <td>
                         <input type="number" min="1" max="20" placeholder="Ingrese un número">
                     </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
@@ -56,6 +60,7 @@
                     <td>
                         <input type="number" min="1" max="20" placeholder="Ingrese un número">
                     </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
@@ -78,6 +83,7 @@
                     <td>
                         <input type="number" min="1" max="20" placeholder="Ingrese un número">
                     </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
@@ -100,11 +106,13 @@
                     <td>
                         <input type="number" min="1" max="20" placeholder="Ingrese un número">
                     </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
                     <td><button class="boton-borrar">Borrar</button></td>
                 </tr>
+                <!-- Repite las filas según sea necesario -->
                 <tr>
                     <td><img src="../src/img/patatas.png" alt="Descripción imagen">
                         <br>
@@ -122,6 +130,7 @@
                     <td>
                         <input type="number" min="1" max="20" placeholder="Ingrese un número">
                     </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td> 
@@ -144,6 +153,7 @@
                     <td>
                         <input type="number" min="1" max="20" placeholder="Ingrese un número">
                     </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
                     <td>
                         <input type="text" placeholder="Ingrese un porcentaje">                  
                     </td>
