generacion de basura

--- a/test/logicaJuego/index.html
+++ b/test/logicaJuego/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="vista-principal-juego">
         <img src="character.gif" alt="main-character" id="personaje">
-        <img src="garbage.png" alt="basura" id="garbage-image">
+        <img src="garbage.png" alt="basura" class="garbage-image">
         <img src="contenedor-amarillo.png" alt="Contenedor Amarillo" class="contenedor" id="contenedor-superior-izquierda">
         <img src="contenedor-azul.png" alt="Contenedor Azul" class="contenedor" id="contenedor-superior-derecha">
         <img src="contenedor-marron.png" alt="Contenedor Marron" class="contenedor" id="contenedor-inferior-izquierda">
