fixear logica juego

--- a/test/logicaJuego/index.html
+++ b/test/logicaJuego/index.html
@@ -9,12 +9,11 @@
 <body>
     <div id="vista-principal-juego">
         <img src="character.gif" alt="main-character" id="personaje">
-        <img src="garbage.png" alt="basura" class="garbage-image" style="display: none;">
         <img src="contenedor-amarillo.png" alt="Contenedor Amarillo" class="contenedor" id="contenedor-superior-izquierda">
         <img src="contenedor-azul.png" alt="Contenedor Azul" class="contenedor" id="contenedor-superior-derecha">
         <img src="contenedor-marron.png" alt="Contenedor Marron" class="contenedor" id="contenedor-inferior-izquierda">
         <img src="contenedor-verde.png" alt="Contenedor Verde" class="contenedor" id="contenedor-inferior-derecha">
     </div>
-    <script type="module" src="game.js"></script>
+    <script type="module" src="gameSegundo.js"></script>
 </body>
 </html>
