--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 				</div>
 			</main>
         </div>
-		<div id="vista-registro">
+		<div id="vista-registro"> <!--Terminada ✅-->
 			<main id="register-page">
 				<div class="div-superior">
 					<a href="index.html"><h1>REGISTRAR USUARIO</h1></a>
@@ -70,7 +70,7 @@
 									
 			</main>
 		</div>
-		<div id="vista-login">
+		<div id="vista-login"> <!--Terminada ✅-->
 			<main id="login-page">
 				<div class="div-superior">
 					<div id="contenedor-imagen">
@@ -92,7 +92,7 @@
 				</div>
 			</main>
 		</div>
-		<div id="vista-menu-usuario">
+		<div id="vista-menu-usuario"> <!--Terminada ✅-->
 			<main id="login-page">
 				<div class="div-superior">
 					<div id="contenedor-imagen">
@@ -109,7 +109,7 @@
 				<button id="vistaRankings">Rankings</button>
 			</main>
 		</div>
-		<div id="vista-principal-juego">
+		<div id="vista-principal-juego"> <!--Terminada ✅-->
 			<p id="contador">0</p>
 			<div id="contenedor-personaje">
 				<img src="img/character.gif" alt="main-character" id="personaje">
@@ -130,7 +130,7 @@
 				<button id="button-volver-listar-mejora">Volver</button>
 			</main>
 		</div>
-		<div id="vista-clasificaciones">
+		<div id="vista-clasificaciones"> <!--Terminada ✅-->
 			<main id="register-page">
 				<div class="div-superior">
 					<label><h1>CLASIFICACION</h1></label>
